// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compareTree should filter elements by percent 1`] = `
Array [
  Object {
    "children": Array [],
    "items": Array [
      Object {
        "children": Array [],
        "kind": 7,
        "text": "<div class=\\"someClass\\"></div>",
        "value": "div",
      },
      Object {
        "children": Array [],
        "kind": 7,
        "text": "<div class=\\"someClass\\"></div>",
        "value": "div",
      },
      Object {
        "children": Array [],
        "kind": 7,
        "text": "<div class=\\"someClass\\"></div>",
        "value": "div",
      },
    ],
    "percent": 0.75,
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "items": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "<div class=\\"container\\">",
            "value": "<div class=\\"container\\">",
          },
        ],
        "percent": 0.25,
      },
      Object {
        "children": Array [],
        "items": Array [
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
        ],
        "percent": 0.5,
      },
      Object {
        "children": Array [],
        "items": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "</div>",
            "value": "</div>",
          },
        ],
        "percent": 0.25,
      },
    ],
    "items": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "<div class=\\"container\\">",
            "value": "<div class=\\"container\\">",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": -1,
            "text": "</div>",
            "value": "</div>",
          },
        ],
        "kind": 7,
        "text": "<div class=\\"container\\"><div class=\\"someClass\\"></div><div class=\\"someClass\\"></div></div>",
        "value": "div",
      },
    ],
    "percent": 0.25,
  },
]
`;

exports[`compareTree should return same compare graph every time 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "items": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "<div class=\\"container\\">",
            "value": "<div class=\\"container\\">",
          },
          Object {
            "children": Array [],
            "kind": -1,
            "text": "<div class=\\"container\\">",
            "value": "<div class=\\"container\\">",
          },
        ],
        "percent": 1,
      },
      Object {
        "children": Array [],
        "items": Array [
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
        ],
        "percent": 1.5,
      },
      Object {
        "children": Array [],
        "items": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "</div>",
            "value": "</div>",
          },
          Object {
            "children": Array [],
            "kind": -1,
            "text": "</div>",
            "value": "</div>",
          },
        ],
        "percent": 1,
      },
    ],
    "items": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "<div class=\\"container\\">",
            "value": "<div class=\\"container\\">",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": -1,
            "text": "</div>",
            "value": "</div>",
          },
        ],
        "kind": 7,
        "text": "<div class=\\"container\\"><div class=\\"someClass\\"></div></div>",
        "value": "div",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "kind": -1,
            "text": "<div class=\\"container\\">",
            "value": "<div class=\\"container\\">",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": 7,
            "text": "<div class=\\"someClass\\"></div>",
            "value": "div",
          },
          Object {
            "children": Array [],
            "kind": -1,
            "text": "</div>",
            "value": "</div>",
          },
        ],
        "kind": 7,
        "text": "<div class=\\"container\\"><div class=\\"someClass\\"></div><div class=\\"someClass\\"></div></div>",
        "value": "div",
      },
    ],
    "percent": 1,
  },
]
`;
